save/restore RestTemplate error handler